--- a/.config/waybar/colors.css
+++ b/.config/waybar/colors.css
@@ -3,103 +3,103 @@
 * Generated with Matugen
 */
 
-    @define-color background #0e1514;
+    @define-color background #1a110e;
 
     @define-color error #ffb4ab;
 
     @define-color error_container #93000a;
 
-    @define-color inverse_on_surface #2b3231;
+    @define-color inverse_on_surface #392e2b;
 
-    @define-color inverse_primary #006a6a;
+    @define-color inverse_primary #8f4c33;
 
-    @define-color inverse_surface #dde4e3;
+    @define-color inverse_surface #f1dfd9;
 
-    @define-color on_background #dde4e3;
+    @define-color on_background #f1dfd9;
 
     @define-color on_error #690005;
 
     @define-color on_error_container #ffdad6;
 
-    @define-color on_primary #003737;
+    @define-color on_primary #55200a;
 
-    @define-color on_primary_container #9cf1f0;
+    @define-color on_primary_container #ffdbcf;
 
-    @define-color on_primary_fixed #002020;
+    @define-color on_primary_fixed #380d00;
 
-    @define-color on_primary_fixed_variant #004f50;
+    @define-color on_primary_fixed_variant #71361e;
 
-    @define-color on_secondary #1b3534;
+    @define-color on_secondary #442a20;
 
-    @define-color on_secondary_container #cce8e7;
+    @define-color on_secondary_container #ffdbcf;
 
-    @define-color on_secondary_fixed #051f1f;
+    @define-color on_secondary_fixed #2c160d;
 
-    @define-color on_secondary_fixed_variant #324b4b;
+    @define-color on_secondary_fixed_variant #5d4035;
 
-    @define-color on_surface #dde4e3;
+    @define-color on_surface #f1dfd9;
 
-    @define-color on_surface_variant #bec9c8;
+    @define-color on_surface_variant #d8c2bb;
 
-    @define-color on_tertiary #1c314b;
+    @define-color on_tertiary #383005;
 
-    @define-color on_tertiary_container #d3e4ff;
+    @define-color on_tertiary_container #f2e3a8;
 
-    @define-color on_tertiary_fixed #041c35;
+    @define-color on_tertiary_fixed #211b00;
 
-    @define-color on_tertiary_fixed_variant #334863;
+    @define-color on_tertiary_fixed_variant #50471a;
 
-    @define-color outline #889392;
+    @define-color outline #a08d86;
 
-    @define-color outline_variant #3f4948;
+    @define-color outline_variant #53433e;
 
-    @define-color primary #80d5d4;
+    @define-color primary #ffb59a;
 
-    @define-color primary_container #004f50;
+    @define-color primary_container #71361e;
 
-    @define-color primary_fixed #9cf1f0;
+    @define-color primary_fixed #ffdbcf;
 
-    @define-color primary_fixed_dim #80d5d4;
+    @define-color primary_fixed_dim #ffb59a;
 
     @define-color scrim #000000;
 
-    @define-color secondary #b0cccb;
+    @define-color secondary #e7beaf;
 
-    @define-color secondary_container #324b4b;
+    @define-color secondary_container #5d4035;
 
-    @define-color secondary_fixed #cce8e7;
+    @define-color secondary_fixed #ffdbcf;
 
-    @define-color secondary_fixed_dim #b0cccb;
+    @define-color secondary_fixed_dim #e7beaf;
 
     @define-color shadow #000000;
 
-    @define-color source_color #0a3333;
+    @define-color source_color #cb5726;
 
-    @define-color surface #0e1514;
+    @define-color surface #1a110e;
 
-    @define-color surface_bright #343a3a;
+    @define-color surface_bright #423733;
 
-    @define-color surface_container #1a2121;
+    @define-color surface_container #271e1a;
 
-    @define-color surface_container_high #252b2b;
+    @define-color surface_container_high #322824;
 
-    @define-color surface_container_highest #2f3636;
+    @define-color surface_container_highest #3d322f;
 
-    @define-color surface_container_low #161d1d;
+    @define-color surface_container_low #231a16;
 
-    @define-color surface_container_lowest #090f0f;
+    @define-color surface_container_lowest #140c09;
 
-    @define-color surface_dim #0e1514;
+    @define-color surface_dim #1a110e;
 
-    @define-color surface_tint #80d5d4;
+    @define-color surface_tint #ffb59a;
 
-    @define-color surface_variant #3f4948;
+    @define-color surface_variant #53433e;
 
-    @define-color tertiary #b3c8e8;
+    @define-color tertiary #d5c78e;
 
-    @define-color tertiary_container #334863;
+    @define-color tertiary_container #50471a;
 
-    @define-color tertiary_fixed #d3e4ff;
+    @define-color tertiary_fixed #f2e3a8;
 
-    @define-color tertiary_fixed_dim #b3c8e8;
+    @define-color tertiary_fixed_dim #d5c78e;
 
