--- a/.config/matugen/templates/wezterm.lua.tmpl
+++ b/.config/matugen/templates/wezterm.lua.tmpl
@@ -20,7 +20,7 @@ return {
     "{{colors.surface_container_lowest.default.hex}}", -- black
     "{{colors.error.default.hex}}",                    -- red
     "{{colors.secondary.default.hex}}",                -- green (accent)
-    "{{colors.surface_bright.default.hex}}",           -- yellow (neutral)
+    "{{colors.on_surface_variant.default.hex}}",           -- yellow (neutral)
     "{{colors.primary.default.hex}}",                  -- blue
     "{{colors.tertiary.default.hex}}",                 -- magenta
     "{{colors.primary_fixed.default.hex}}",            -- cyan
@@ -29,10 +29,10 @@ return {
 
   -- Bright ANSI 8..15
   brights = {
-    "{{colors.surface_container_low.default.hex}}",    -- br_black
+    "{{colors.on_surface.default.hex}}",               -- br_black
     "{{colors.on_error_container.default.hex}}",       -- br_red
     "{{colors.secondary_fixed.default.hex}}",          -- br_green
-    "{{colors.surface_variant.default.hex}}",          -- br_yellow (neutral strong)
+    "{{colors.on_surface_variant.default.hex}}",          -- br_yellow (neutral strong)
     "{{colors.primary_fixed.default.hex}}",            -- br_blue
     "{{colors.tertiary_fixed.default.hex}}",           -- br_magenta
     "{{colors.primary_fixed_dim.default.hex}}",        -- br_cyan
