hypr and waybar details

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,7 +2,7 @@
 
 /* General */
 * {
-  font-family: 'IntoneMono Nerd Font', sans-serif;
+  font-family: "JetBrainsMono Nerd Font", "FiraCode Nerd Font", sans-serif;
   font-size: 15px;
   border-radius: 10px;
 }
